<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grey"
    android:orientation="vertical">

    <TextView
        android:id="@+id/framework"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/frame_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/testapp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/framework"
        android:gravity="center"
        android:text="@string/activity_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <!-- button for launching default browser -->

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center">
    </RelativeLayout>

    <Button
        android:id="@+id/trackInstallButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/testapp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/track_session"/>

    <Button
        android:id="@+id/bSubmitItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/trackInstallButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="66dp"
        android:layout_marginLeft="41dp"
        android:text="@string/submit_items"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/bItemSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trackInstallButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"
        android:text="@string/submit_items"/>

    <Button
        android:id="@+id/bAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bSubmitItems"
        android:layout_alignBottom="@+id/bSubmitItems"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="58dp"
        android:text="@string/add_item"
        tools:ignore="RtlHardcoded" />

</RelativeLayout>